--- a/.gitignore
+++ b/.gitignore
@@ -93,4 +93,6 @@ Generated_Code #added for RIA/Silverlight projects
 # Visual Studio version. Backup files are not needed, because we have git ;-)
 _UpgradeReport_Files/
 Backup*/
-UpgradeLog*.XML
+UpgradeLog*.*
+
+.vs/
